# cv_projects_reference

./: README.md
#10_HMACSHA256/: hmachash256_otm_kit.v  interative_processing.v  m_digest.v  m_pader_parser.v  m_scheduler.v  sha256_otm_kit.v  top_sha.v
#10_HMACSHA256/uart/: rx.v  top_task.v  tx.v
#11_KernelModule_TFTDisplay/app_tft/: Makefile  app  app.c  tft.c  tie_define.h
#11_KernelModule_TFTDisplay/app_tft/tcp/: tcp_ser.c  tcp_ser.h
#11_KernelModule_TFTDisplay/app_tft/tetris/: board.c  board.h  tetris.c  tetris.h
#11_KernelModule_TFTDisplay/app_tft/tft/: tie_st7735.c  tie_st7735.h
#11_KernelModule_TFTDisplay/app_tft/utils/: utils.c  utils.h
#11_KernelModule_TFTDisplay/driver_otm/: Makefile  modules.order  my_driver.c  my_driver.ko  my_driver.mod.c
#12_SmartClock_STM32F1_TFTDisplay/Demo/: CMakeLists.txt  Makefile
#12_SmartClock_STM32F1_TFTDisplay/Demo/Core/Src/: main.c
#12_SmartClock_STM32F1_TFTDisplay/Demo/FreeRTOS/include/: FreeRTOSConfig.h  portmacro.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/App/: app.c  asset.h  jsmn.c  jsmn.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/App/gui/: tie_gui.c  tie_gui.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/App/gui/tetris/: board.c  board.h  tetris.c  tetris.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Asset/data/: arrow_3bit.h  back_btn_3bit.h  clock_num_3bit.h  frame_btn_3bit.h  gui_app_bg_3bit.h  gui_app_clock_3bit.h  gui_app_setting_3bit.h  gui_app_side_3bit.h  gui_app_side_sel_3bit.h  gui_app_start_3bit.h  gui_app_tet_3bit.h  gui_app_weather_3bit.h  option_btn_3bit.h  setting_light_3bit.h  setting_title_3bit.h  setting_vol_3bit.h  tet_back_btn_3bit.h  tet_frame_btn_3bit.h  tet_option_btn_3bit.h  tet_start_btn_3bit.h  tet_title_3bit.h  title_3bit.h  weather_cloud_3bit.h  weather_o_3bit.h  weather_rain_3bit.h  weather_sun_3bit.h  weather_title_3bit.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/: tie_devices.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/button/: tie_button.c  tie_button.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/buzzer/: tie_buzzer.c  tie_buzzer.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/ft/: tie_ft.c  tie_ft.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/joy/: tie_joy.c  tie_joy.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/rs232/: tie_rs232.c  tie_rs232.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/tft/: tie_st7735.c  tie_st7735.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/tft/bmp/: bmp_types.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Devices/tft/fonts/: bitmap_typedefs.h  font_fixedsys_mono_16.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/DriverCore/: tie_define.h  tie_driver.c  tie_driver.h
#12_SmartClock_STM32F1_TFTDisplay/Demo/Project/Main/: sys.c  sys.h  utils.c  utils.h
#1_Streamming/: readme.md  readme.txt
#1_Streamming/src/node client/: main.c  tie_5110.c  tie_driver.c  tie_station.c  tie_tcp_client.c
#1_Streamming/src/sink/: main.c  tie_button.c  tie_softap.c  tie_tcp_server.c
#2_TetrisGame/: CMakeLists.txt  Makefile
#2_TetrisGame/Core/Src/: main.c
#2_TetrisGame/Project/App/: app.c  utils.h
#2_TetrisGame/Project/Devices/: tie_devices.h
#2_TetrisGame/Project/DriverCore/: tie_define.h  tie_driver.c  tie_driver.h
#2_TetrisGame/Project/Main/: sys.c  sys.h
#3_8051/App/config/: bo2.txt  bo3.txt  config.txt  settings.txt  settings_.txt
#3_8051/Code8051/: .makefile.swp  makefile  mypgm.txt  uart.c
#3_8051/Simulate/: temp.pdsprj  temp.pdsprj.LAPTOP-GID2L6CI.ASUS.workspace
#3_8051/Simulate/Project Backups/: temp [20230411, 23-30-55].pdsprj  temp [20230413, 15-47-46].pdsprj  temp [20230416, 12-31-38].pdsprj  temp [20230417, 23-00-02].pdsprj  temp [20230503, 21-18-44].pdsprj  temp [20230503, 21-41-17].pdsprj  temp [20230518, 22-33-39].pdsprj  temp [Autosaved].pdsprj
#3_8051/Uno/: uno.ino
#4_BoardGame/tie_board_game/main/: control_mode.txt  main.ino  tie_path.h
#5_Stm32_transmit_PC/codemake/: CMakeLists.txt  Makefile
#5_Stm32_transmit_PC/multi_thread/: makefile
#5_Stm32_transmit_PC/multi_thread/export/: rickroll.8bgif  sub_bmp.txt
#5_Stm32_transmit_PC/multi_thread/inc/: App.h  Layer.h  PrintText.h  tie_thread.h
#5_Stm32_transmit_PC/multi_thread/src/: App.cpp  App_Display.cpp  (+4 more)
#6_rpg_game/include/: Animation.h  Cam2D.h  Character.h  Enemies.h  Entity.h  FontC.h  FrameTime.h  GUI.h  GUI_Table_Content.h  Game.h  InfoChar.h  LevelPro.h  Sprite.h  SrcEntities.h  SrcItems.h  TilesMap.h
#6_rpg_game/src/: Animation.cpp  Cam2D.cpp  Character.cpp  Enemies.cpp  Entity.cpp  FontC.cpp  GUI.cpp  GUI_Table_Content.cpp  Game.cpp  LevelPro.cpp  Sprite.cpp  SrcEntities.cpp  SrcItems.cpp  TilesMap.cpp  raylibCpp.cpp
#8_MMO/client/: cli0.py  common.py  game.py  map.py  player.py  settings.py
#8_MMO/server/: common.py  game.py  map.py  player.py  ser0.py  setttings.py
#9_ServerStream/: cli.py  client_admin.py  client_cam.py  client_view.py  common.py
#9_ServerStream/c_ser/: Makefile  ser.c
#9_ServerStream/tie_mul/: TieProcess.py  TieThread.py
#9_ServerStream/ui/: admin.py  ip.txt
(+143 files in other folders)
